--- a/.github/workflows/mysqlcreate.yml
+++ b/.github/workflows/mysqlcreate.yml
@@ -8,10 +8,10 @@ on:
     - 'readmeformysql.md' 
 
 env:
-  AZURE_RESOURCE_GROUP: buvanmysqldb               # set this to your Azure Resource group's name  
+  AZURE_RESOURCE_GROUP: vijaymysqldb               # set this to your Azure Resource group's name  
   AZURE_LOCATION: eastus                         # set this to your azure resource group location   
-  AZURE_MYSQL_SERVERNAME: buvanmysqldbserver         # set MYSQL Server  
-  AZURE_MYSQL_DATABASE: buvanmysqldatabase    # set MYSQL Databsae
+  AZURE_MYSQL_SERVERNAME: vijaymysqldbserver         # set MYSQL Server  
+  AZURE_MYSQL_DATABASE: vijaymysqldatabase    # set MYSQL Databsae
   AZURE_MYSQLFIREWALL_IP: 0.0.0.0    # set this to all Azure IPs
   
 
@@ -22,7 +22,7 @@ jobs:
     - uses: actions/checkout@v1
     - uses: azure/login@v1
       with:
-        creds: ${{ secrets.MYDEPLOYMENT }}
+        creds: ${{ secrets.DEPLOYGITHUB }}
 
 # Provision a Azure MYSQL Database on Azure
     - name: Azure MYSQL Server creation
@@ -31,7 +31,7 @@ jobs:
         azcliversion: latest
         inlineScript: |
           az group create --name ${{ env.AZURE_RESOURCE_GROUP }} --location ${{ env.AZURE_LOCATION }}
-          az mysql server create --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name ${{ env.AZURE_MYSQL_SERVERNAME }} --location ${{ env.AZURE_LOCATION }} --admin-user ${{ secrets.MYADMIN }} --admin-password ${{ secrets.MYPASS }} --sku-name B_Gen5_2=
+          az mysql server create --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --name ${{ env.AZURE_MYSQL_SERVERNAME }} --location ${{ env.AZURE_LOCATION }} --admin-user ${{ secrets.MYSQLADMINUSER }} --admin-password ${{ secrets.MYSQLADMINPASS }} --sku-name B_Gen5_2
           az mysql server firewall-rule create --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --server ${{ env.AZURE_MYSQL_SERVERNAME }} --name AllowAzure --start-ip-address ${{ env.AZURE_MYSQLFIREWALL_IP }} --end-ip-address ${{ env.AZURE_MYSQLFIREWALL_IP }}
           az mysql db create --name ${{ env.AZURE_MYSQL_DATABASE }} --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --server-name ${{ env.AZURE_MYSQL_SERVERNAME }}
  
